2005-02-15  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener),
	src/cerebrod/cerebrod_speaker.c (_cerebrod_speaker_initialize,
	cerebrod_speaker): Use recvfrom/sendto interface rather than
	read/write interface for sending packets.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_dump_cluster_node_data): Fix assert bug. Add
	hash count to output.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_dump_cluster_node_data_item): Fix pointer
	error.

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Fix hash
	key buffering error.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c (Hash_count,
	wrap_hash_count): New functions and macros.

	* src/libcommon/wrappers.c (wrap_hash_insert): Add additional
	error check.

2005-02-14  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_pre_calculate_configuration_config_check): Add
	listen_threads check.

	* src/cerebrod/cerebrod.c (main): Launch listen threads
	appropriately.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_calculate_configuration): Calculate destination ip
	inaddr in both listener and speaker mode.

	* src/cerebrod/cerebrod_speaker.c
	(_cerebrod_speaker_create_and_setup_socket),
	src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_create_and_setup_socket): Add memsets to
	ensure correct settings.

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Fix buffer
	input error.
	
	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_speaker.c, src/cerebrod_listener.c: Globally
	rename heartbeat_in_addr to heartbeat_network_interface_in_addr.
	Globally rename destination_in_addr to destination_ip_in_addr.
	
2005-02-09  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_listener.h,
	src/cerebrod/cerebrod_listener.c: Completed basic listener
	functionality.  Added rehashing of hash when hash is too large.
	Added cluster_node_data_hash debugging.
